fixed normalization